fix compilation and test errors

--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -247,7 +247,7 @@
       <a
         *ngFor="let option of locationDropdownOptions"
         class="dropdown-item"
-        (click)="getLocation(option.coords);">
+        (click)="getWeather(option.coords);">
         {{ option.text }}
       </a>
     </div>
