add bootstrap and start styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
 <router-outlet></router-outlet>
+
+<!-- <div class="bg-info text-center footer">
+  <!-- TODO use css for bolding --/>
+  <strong>&copy; 2019 Lucas Miller. All rights reserved.</strong>
+</div> -->
