--- a/src/app/part/part.component.scss
+++ b/src/app/part/part.component.scss
@@ -3,28 +3,18 @@
 .part {
   @include componentBase;
   align-items: center;
+  background-color: #222;
+  color: #fff;
   display: flex;
   flex-direction: column;
-
-  // margin: 0;
   font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  font-size: .9375rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #fff;
-  // text-align: left;
-  background-color: #222;
 
   &__input {
     max-width: 350px;
   }
 
   &__info {
-    //
-  }
-
-  &__buttonGroup {
-    //
+    margin: 15px 0;
   }
 
   &__button {
