--- a/src/app/ip/ip.component.scss
+++ b/src/app/ip/ip.component.scss
@@ -2,4 +2,23 @@
 
 .ip {
   @include componentBase;
+  background: black;
+  color: rgb(0,250,0);
+  font-family: monospace;
+  text-align: center;
+
+  &__detail {
+    margin: 14px 0;
+
+    &Value {
+      margin: 0;
+      margin-bottom: 1px;
+    }
+
+    &Name {
+      color: rgba(165,165,165,0.9);
+      margin: 0;
+      text-transform: capitalize;
+    }
+  }
 }
