--- a/src/app/lucas/lucas.component.html
+++ b/src/app/lucas/lucas.component.html
@@ -1,7 +1,10 @@
-<h1>
-  <span>L</span>
-  <span>u</span>
-  <span>c</span>
-  <span>a</span>
-  <span>s</span>
-</h1>
+<div class="lucas">
+  <div class="lucas__letters">
+    <span
+      *ngFor="let letter of mapLettersToHTML(); let i = index"
+      [innerHTML]="letter"
+      [ngClass]="isTriggeredClass(i)"
+      class="lucas__letter">
+    </span>
+  </div>
+</div>
