--- a/src/app/lucas/lucas.component.scss
+++ b/src/app/lucas/lucas.component.scss
@@ -4,6 +4,7 @@ $backgroundColor: rgb(255,0,0);
 $backgroundGradient: linear-gradient(142deg, rgba(255,0,0,1) 0%, rgba(255,194,0,1) 100%);
 $textBackgroundColor: rgba(0,0,0,0.15);
 $textColor: rgba(0,0,0,1);
+$selectionColor: rgba(151, 0, 0, 0.8);
 
 .lucas {
   @include componentBase;
@@ -25,6 +26,10 @@ $textColor: rgba(0,0,0,1);
     font-family: sans-serif;
     font-size: 4.5rem;
     font-weight: bold;
+
+    &::selection {
+      background: $selectionColor;
+    }
   }
   
   &__notTriggered {
@@ -32,11 +37,11 @@ $textColor: rgba(0,0,0,1);
   }
   
   &__triggered {
-    animation: fadeIn 1s ease;
+    animation: fadeIn 0.5s ease;
   }
 }
 
 @keyframes fadeIn {
   0% { opacity: 0; }
-  100% { opacity: 1 }
+  100% { opacity: 1; }
 }
