--- a/src/app/weather/weather.component.scss
+++ b/src/app/weather/weather.component.scss
@@ -5,16 +5,51 @@
   background-color: #060606;
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-  padding: 8px;
+  padding: 25px 8px;
   text-align: center;
 
-  &__locationName {
-    text-align: center;
-  }
+  &__current {
+    // https://css-tricks.com/snippets/css/complete-guide-grid
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto auto auto;
+    margin: 0 auto 1rem;
+    max-width: 420px;
 
-  &__currentTemp {
-    margin-left: 20px;
-    vertical-align: middle;
+    &--condition {
+      grid-area: 1 / 1 / 2 / 2;
+      text-align: center;
+    }
+
+    &--temp {
+      align-items: center;
+      display: flex;
+      grid-area: 1 / 2 / 2 / 3;
+      justify-content: center;
+      font-size: 4rem;
+    }
+
+    &--locationName {
+      grid-area: 2 / 1 / 3 / 3;
+      text-align: center;
+    }
+
+    &--today {
+      grid-area: 3 / 1 / 4 / 2;
+      padding-left: 10px;
+      text-align: left;
+    }
+
+    &--highLow {
+      display: flex;
+      grid-area: 3 / 2 / 4 / 3;
+      justify-content: flex-end;
+      padding-right: 10px;
+
+      & > *:first-child {
+        margin-right: 20px; // TODO doesnt work
+      }
+    }
   }
 
   &__today {
@@ -38,6 +73,17 @@
 
     &--48hours {
       overflow-x: auto;
+    }
+
+    &__text {
+      &--bold {
+        font-weight: bold;
+      }
+
+      &--noWrap {
+        // TODO uncomment and check for difference
+        // white-space: nowrap;
+      }
     }
   }
 }
